# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: ci.yml
page_analyzer/: __init__.py  app.py  parser.py  validate.py
page_analyzer/templates/: 404.html  500.html  base.html  index.html  url.html  urls.html
