[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Web application for checking a web page."
authors = ["shizomanya <mistic_aa@inbox.ru>"]
readme = "README.md"
repository = "https://github.com/shizomanya/python-project-lvl3.git"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
  { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^7.0.0"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
flask = "^3.0.3"
requests = "^2.32.2"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
validators = "^0.28.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
